Allow Administrators to push tags

--- a/project.config
+++ b/project.config
@@ -3,3 +3,5 @@
 	description = Nextdoor ServiceRegistry Foundational Python Class
 [receive]
 	requireChangeId = true
+[access "refs/heads/*"]
+	pushTag = group Administrators
