Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,3 +8,4 @@
 	push = group Administrators
 	create = group Administrators
 	pushMerge = group Administrators
+	forgeAuthor = group Administrators
