Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,3 +9,4 @@
 	create = group Administrators
 	pushMerge = group Administrators
 	forgeAuthor = group Administrators
+	exclusiveGroupPermissions = push pushTag
