Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,8 +5,4 @@
 	requireChangeId = true
 [access "refs/heads/*"]
 	pushTag = group Administrators
-	push = group Administrators
-	create = group Administrators
-	pushMerge = group Administrators
-	forgeAuthor = group Administrators
-	exclusiveGroupPermissions = push pushTag
+	pushTag = group Nextdoor Engineers
