Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,6 +3,5 @@
 	description = Nextdoor ServiceRegistry Foundational Python Class
 [receive]
 	requireChangeId = true
-[access "refs/heads/*"]
+[access "refs/*"]
 	pushTag = group Administrators
-	pushTag = group Nextdoor Engineers
