Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,4 +4,5 @@
 [receive]
 	requireChangeId = true
 [access "refs/*"]
-	pushTag = +force group Administrators
+	pushTag = group Administrators
+	push = +force group Administrators
