--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 install:
   - python setup.py install
   - pip install -r requirements.test.txt
-script: nosetests -a unit
+script: python setup.py test
