Pyflakes cleanup in the bin.ndsr package.
Creates a static mapping of possible commands to their
actual package+class names. This is more explicit, and
cleans up some pyflakes warnings about unused imports.

Also add pyflakes to the TravisCI tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 install:
   - python setup.py install
   - pip install -r requirements.test.txt
-script: python setup.py test pep8
+script: python setup.py test pep8 pyflakes
