--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,5 @@ python:
   - "2.7"
   - "pypy"
 install:
-  - python setup.py install
-  - pip install -r requirements.test.txt
-script: python setup.py test pep8 pyflakes
+  - make zookeeper
+script: make integration
