--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
   - "2.7"
   - "pypy"
+env:
+  - KAZOO_VERSION=1.3
+  - KAZOO_VERSION=2.0
 install:
+  - pip install -q kazoo==$KAZOO_VERSION
   - make zookeeper
 script: make integration
