--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   - KAZOO_VERSION=1.3
   - KAZOO_VERSION=2.0
 install:
-  - pip install -q kazoo==$KAZOO_VERSION
+  - pip install kazoo==$KAZOO_VERSION
   - make zookeeper
+  - pip freeze
 script: make integration
