--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: python
 python:
-  - "2.7"
   - "3.5"
+  - "3.6"
+  - "3.7"
 env:
   - KAZOO_VERSION=1.3
   - KAZOO_VERSION=2.0
   - KAZOO_VERSION=2.2
+  - KAZOO_VERSION=2.5.0
 install:
   - pip install kazoo==$KAZOO_VERSION
   - make zookeeper
