--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,14 @@ env:
   - KAZOO_VERSION=2.0
   - KAZOO_VERSION=2.2
   - KAZOO_VERSION=2.5.0
+jobs:
+  exclude:
+    - python: "3.7"
+      env: KAZOO_VERSION=1.3
+    - python: "3.7"
+      env: KAZOO_VERSION=2.0
+    - python: "3.7"
+      env: KAZOO_VERSION=2.2
 install:
   - pip install kazoo==$KAZOO_VERSION
   - make zookeeper
