--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ env:
   - KAZOO_VERSION=2.5.0
 jobs:
   exclude:
+    - python: "3.6"
+      env: KAZOO_VERSION=2.0
     - python: "3.7"
       env: KAZOO_VERSION=1.3
     - python: "3.7"
